--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <script src="../src/scrpit.js"></script>
+    <script src="/scrpit.js"></script>
 </body>
 
 </html>
